--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,20 @@
-name: CI
-
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
-
+name: Build and Deploy
+on: [push]
+permissions:
+  contents: write
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: install
-        run: npm i --legacy-peer-deps
+      - name: Install and Build 
+        run: |
+          npm ci
+          npm run build
 
-      - name: build
-        run: npm run build
-
-      - name: deploy pages
-        uses: JamesIves/github-pages-deploy-action@v4.4.1
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4.5.0
         with:
-          branch: main
-          folder: build
+          folder: build # The folder the action should deploy.
