migrated from vanilla

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    env:
+      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      SYSTEM_MESSAGE: ${{ secrets.SYSTEM_MESSAGE }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
